# clblast-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.hpp
.github/workflows/: rust.yml
examples/: saxpy.rs
src/: bindings.rs  lib.rs
tests/: integration_tests.rs
