[package]
name = "clblast-sys"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"
links = "clblast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.54.1", optional = true }
cmake = "0.1.42"

[dev-dependencies]
ocl = "0.19.3"
ndarray = "0.13.1"
num-traits = "0.2.12"

[dependencies]
libc = "0.2.72"
